<resources>
    <string name="app_name">SecondTry</string>

    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="apps">Apps</string>
    <string name="books">Books</string>
    <string name="search_here">Search Here (first choose type)</string>
    <string name="collection_name">Collection Name</string>
    <string name="collection_price">Collection Price</string>
    <string name="release_date">Release Date</string>
    <string name="test_image">Test Image</string>
    <string name="artist_name">Artist Name:</string>
    <string name="item_name">Item Name:</string>
    <string name="release_date_details">Release Date:</string>
    <string name="description">Description:</string>
    <string name="artist_name_ref">Artist Name</string>
    <string name="item_name_ref">Item Name</string>
    <string name="release_date_ref">Release Date</string>
    <string name="description_ref">Description</string>
    <string name="all">All</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="podcast">Podcast</string>
    <string name="kind">Kind:</string>
    <string name="price">Price:</string>
</resources>