<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp"
        android:background="#171F28"
        tools:context=".view.MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_search"
            android:inputType="text"
            android:backgroundTintMode="add"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/search_icon"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/search_here"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:textAllCaps="false"
                android:id="@+id/movieButton"
                android:textSize="@dimen/_10sdp"
                android:text="@string/movies"
                android:layout_margin="@dimen/_2sdp"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content" />
            <Button
                android:textAllCaps="false"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/musicButton"
                android:layout_margin="@dimen/_2sdp"
                android:text="@string/music"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content" />
            <Button
                android:textAllCaps="false"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/appsButton"
                android:layout_margin="@dimen/_2sdp"
                android:text="@string/apps"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content" />
            <Button
                android:textAllCaps="false"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/podcastButton"
                android:layout_margin="@dimen/_2sdp"
                android:text="@string/podcast"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item"
            android:layout_marginTop="@dimen/_10sdp">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</layout>